Jann 30/objects/GS1_Pallet_Design__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pallet Design Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Pallet Design Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pallet_Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pallet Material</label>
        <referenceTo>GS1_Pallet_Material__c</referenceTo>
        <relationshipLabel>Pallet Designs</relationshipLabel>
        <relationshipName>Palet_Designs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>Pallet_Material__r.Code__c + &apos;~&apos; +  Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <label>GS1 Pallet Design</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Pallet_Material__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Pallet_Designs</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Pallet_Material__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Pallet Designs</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Pallet_Designs</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Pallet_Material__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive Pallet Designs</label>
    </listViews>
    <nameField>
        <label>Pallet Design Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000001EiecEAC_00N90000006wkyXEAQ</fullName>
        <active>true</active>
        <field>GS1_Request__c.Pallet_Design__c</field>
        <filterItems>
            <field>GS1_Pallet_Design__c.Pallet_Material__c</field>
            <operation>equals</operation>
            <valueField>$Source.Pallet_Material__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product_Pallet Design</name>
        <sourceObject>GS1_Request__c</sourceObject>
    </namedFilters>
    <pluralLabel>GS1 Pallet Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>